# STARK-Transparent-Proof-ZKP

./: .gitignore  CMakeLists.txt  README.md
libstark-project/: .gitignore  README.md
libstark-project/src/: main.cpp
libstark-project/src/constraints/: arithmetization  polynomial_constraints.cpp  polynomial_constraints.h
libstark-project/src/randomness/: public_randomness  public_randomness.cpp  public_randomness.h
libstark-project/src/utils/: helpers.cpp
src/: main.cpp
src/constraints/: arithmetization  arithmetization.cpp  polynomial_constraints.cpp  polynomial_constraints.h  test_polynomial_constraints.cpp
src/proofs/: proof_verification.h
src/randomness/: public_randomness  public_randomness.cpp  public_randomness.h
src/utils/: helpers.h
